# FastAlloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: bench_main.cpp
include/: fast_alloc.h
src/: fast_alloc.cpp  fast_alloc_config.h  global_heap.cpp  global_heap.h  os_memory.cpp  os_memory.h  slab.cpp  slab.h  tls_cache.cpp  tls_cache.h
tests/: test_main.cpp
